[gd_scene load_steps=2 format=3 uid="uid://kffumios5tkb"]

[ext_resource type="Script" path="res://src/scenes/regista.gd" id="1_ojhok"]

[node name="Regista" type="Node"]
script = ExtResource("1_ojhok")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -84.0
offset_right = -88.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="LoadSPC" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -20.0
offset_right = 230.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "Convert SPC Image"

[node name="decompButton" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 56.0
offset_right = 310.0
offset_bottom = 87.0
text = "Output Decompressed Files (Debug)"

[node name="REGISTALoadSPC" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.spc")

[node name="REGISTALoadFOLDER" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="pressed" from="Control/LoadSPC" to="." method="_on_load_spc_pressed"]
[connection signal="toggled" from="Control/decompButton" to="." method="_on_decomp_button_toggled"]
[connection signal="files_selected" from="REGISTALoadSPC" to="." method="_on_regista_load_spc_files_selected"]
[connection signal="dir_selected" from="REGISTALoadFOLDER" to="." method="_on_regista_load_folder_dir_selected"]
